todo-app implemented

--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -41,6 +41,10 @@
             <a class="nav-link text-dark" [routerLink]="['/data-graphs']"
               >Data graphs</a
             >
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/todo-app']"
+              >Todo app</a
+            >
           </li>
         </ul>
       </div>
